Fixed panels beeing too wide

--- a/less/style.less
+++ b/less/style.less
@@ -247,6 +247,7 @@ h2 i.fa{
             flex: 1 1 auto;
             overflow: hidden;
             text-overflow: ellipsis;
+            word-break: break-all;
           }
         }
 
